trying flex-shrink: 0 on section-item, item-entry, and date-range to resolve font shrinking issue when screen is rotated or enlarged on mobile

--- a/src/styles/cv.css
+++ b/src/styles/cv.css
@@ -36,6 +36,7 @@ body {
 .section-item {
   margin-bottom: 0.6em;
   font-size: 1rem;
+  flex-shrink: 0; 
 }
 
 .subhead {
@@ -57,6 +58,7 @@ hr {
 .item-entry {
   margin-bottom: 1rem;
   font-size: 1rem;
+  flex-shrink: 0; 
 }
 
 .item-header {
@@ -69,6 +71,7 @@ hr {
   white-space: nowrap;
   font-weight: normal;
   font-size: 1rem;
+  flex-shrink: 0; 
 }
 
 .two-column-list {
